# dotfiles

./: .aliases.sh  .bindings.sh  .editorconfig  .exports.sh  .functions.sh  .gitignore  .luarc.json  .pre-commit-config.yaml  .vimrc  .warprc  .zshenv  .zshrc  Pipfile  README.md  aliases.sh  ansible.cfg  ansible.json  config-playbook.yml  exports.sh  functions.sh  go.mod  install.py  install.sh  inventory.yaml  playbook-config.yaml  tab.yml  vim.map
ansible/: ansible.cfg  config.yaml  get-latest-release-from-github.yaml  github-release.yaml  inventory.yaml  playbook-config.yaml  requirements-python.txt
ansible/group_vars/: archlinux.yaml  darwin.yaml
ansible/handlers/: updates.yaml
ansible/modules/: cargo.py
ansible/templates/: ssh.config.j2
ansible/vars/: 0-primary-vars.yaml  1-archlinux.yaml  (+1 more)
color-schemes/: colors.list
configs/: spacevim.toml  starship.toml
git/: gitconfig  gitconfig_global  gitignore
iterm-profiles/: com.googlecode.iterm2.plist
k8s/: exec-pod.yaml  kafka-test.yaml
python/: commands.py  py_print  realpath
rust-tools/: Cargo.toml
rust-tools/src/: main.rs
rust-tools/src/github/: mod.rs  releases.rs
scripts/: download-patreon.py  extract  image-downloaders.zsh  image-site-archive.py  image-site-archive.sh  init  init.sh  kubectx  kubens  patreon-gather-links.js  py_print  realpath  rustup.sh  split-k8s-file  update-cloudflare-dns-record  youtube-archive.sh  youtube-daily.sh
zsh/: .aliases.zsh  .bindings.zsh  .colors.zsh  .exports.zsh  .functions.zsh  .functions.zshe  .fzf.zsh  .zshrc  _vars.zsh  function_help.json
(+805 files in other folders)
