[package]
name = "rust-tools"
version = "0.1.0"
authors = ["Nic Patterson <nic@reynn.dev>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.1"
octocrab = "~0.4"
anyhow = "~1.0"
tokio = { version = "0.2", features = ["full"] }
serde = "1.0"
serde_json = "1.0"
