[package]
authors = ["Nic Patterson <nic@reynn.dev>"]
edition = "2018"
name    = "rust-tools"
version = "0.1.0"

[dependencies]
anyhow           = { version = "1.0" }
cfg-if           = { version = "0.1" }
chrono           = { version = "0.4" }
clap             = { version = "3.0.0-beta.1" }
directories-next = { version = "1.0" }
fern             = { version = "0.6" }
hubcaps          = { version = "0.6" }
lazy_static      = { version = "1.4" }
log              = { version = "0.4" }
regex            = { version = "1.3" }
serde            = { version = "1.0" }
serde_json       = { version = "1.0" }
skim             = { version = "0.8" }
tokio            = { version = "0.2", features = ["full"] }
